--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 sudo: false
 os:
-  - linux
-
+- linux
 language: node_js
 node_js:
-  - "6.11.0"
-
+- 6.11.0
+before_install:
+- openssl aes-256-cbc -K $encrypted_8b14c5c9ad56_key -iv $encrypted_8b14c5c9ad56_iv
+  -in deploy-secret.json.enc -out deploy-secret.json -d
 deploy:
   provider: gae
   skip_cleanup: true
-  keyfile: "deploy-secret.json"
-  project: "car-pool-001"
+  keyfile: deploy-secret.json
+  project: car-pool-001
