--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: required
 os:
 - linux
 language: node_js
@@ -7,6 +7,8 @@ node_js:
 before_install:
 - openssl aes-256-cbc -K $encrypted_8b14c5c9ad56_key -iv $encrypted_8b14c5c9ad56_iv
   -in deploy-secret.json.enc -out deploy-secret.json -d
+before_deploy:
+- npm run build:frontend
 deploy:
   provider: gae
   skip_cleanup: true
